--- a/asset/css/mascota.css
+++ b/asset/css/mascota.css
@@ -5,7 +5,22 @@
             body {
                 background: #fff0cb;
             }
-
+		.card {
+			position: relative;
+			display: -webkit-box;
+			display: -ms-flexbox;
+			display: flex;
+			-webkit-box-orient: vertical;
+			-webkit-box-direction: normal;
+			-ms-flex-direction: column;
+			flex-direction: column;
+			min-width: 0;
+			word-wrap: break-word;
+			background-color: #042b4e;
+			background-clip: border-box;
+			border: 1px solid rgba(0,0,0,.125);
+			border-radius: .25rem;
+		}
             #regForm {
                 font-family: Raleway;
                 background-color: rgb(4, 43, 78) !important;
@@ -16,6 +31,11 @@
                 min-height: 600px;
                 color: #fff0cb;
             }
+			.btn-primary {
+			color: #fff;
+			background-color: #61bad8;
+			border-color: #61bad8;
+			}
 
             h1 {
                 text-align: center;  
